2005-04-02  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-04-01  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-31  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-31  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-31  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-30  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2003-03-30  Ryan Lortie  <desrt@desrt.ca>

	* gweather-about.c: Fix a silly typo.

2005-03-30  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-29  Christian Rose  <menthos@menthos.com>

	* Locations.xml.in: Added some more translator
	comments, explaining what country the names come from.

2005-03-29  Ryan Lortie  <desrt@desrt.ca>

	* gweather-dialog.c: Remove some debugging output (bug #171924)

	* gweather-xml.h: Change the prototype from void -> int to allow
	an indication of success/failure to parse the XML.

	* gweather-pref.c: Add an error dialog asking the user to file a
	bug in the case of an Locations.xml parse error.

	* weather.h: Removed trans/untrans_name for favour of a single
	'name' field in the WeatherLocation structure.  Change prototype
	of weather_location_new to take the single name.  (bug #171855)

	* weather.c: Lots of changes to deal with the removal of
	trans/untrans_name.
